--- a/KPU_T/app/src/main/AndroidManifest.xml
+++ b/KPU_T/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/taxi"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".findpasswordAndID"></activity>
+        <activity android:name=".FindpwActivity"></activity>
+        <activity android:name=".findpasswordAndID" />
         <activity android:name=".CarJoint" />
         <activity android:name=".Chatting" />
         <activity android:name=".MyMenu" />
