--- a/KPU_T/app/src/main/AndroidManifest.xml
+++ b/KPU_T/app/src/main/AndroidManifest.xml
@@ -3,20 +3,18 @@
     package="kr.ac.kpu.kpu_t">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/taxi"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/taxi"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FindpwActivity"></activity>
-        <activity android:name=".findpasswordAndID" />
-        <activity android:name=".CarJoint" />
+        <activity android:name=".TaxiRoomSetting"></activity>
+        <activity android:name=".FindpwActivity" />
         <activity android:name=".Chatting" />
-        <activity android:name=".MyMenu" />
         <activity android:name=".TaxiMain" />
         <activity android:name=".SignInActivity" />
-        <activity android:name=".SignIN_Activity" />
         <activity android:name=".Main_Activity1" />
         <activity android:name=".MainActivity">
             <intent-filter>
