--- a/KPU_T/app/src/main/AndroidManifest.xml
+++ b/KPU_T/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/taxi"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TaxiRoomSetting"></activity>
+        <activity android:name=".carfull_Board_setting"/>
+        <activity android:name=".TaxiRoomSetting" />
         <activity android:name=".FindpwActivity" />
         <activity android:name=".Chatting" />
         <activity android:name=".TaxiMain" />
