--- a/KPU_T/app/build.gradle
+++ b/KPU_T/app/build.gradle
@@ -34,6 +34,7 @@ android {
 dependencies {
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
     implementation 'io.realm:android-adapters:2.1.1'
+    implementation 'com.google.firebase:firebase-database:19.3.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
