mypage and tabhost change

--- a/KPU_T/app/src/main/AndroidManifest.xml
+++ b/KPU_T/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     package="kr.ac.kpu.kpu_t">
 
 
+
+
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
