--- a/KPU_T/app/src/main/AndroidManifest.xml
+++ b/KPU_T/app/src/main/AndroidManifest.xml
@@ -3,9 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="kr.ac.kpu.kpu_t">
 
-
-
-
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
@@ -16,6 +13,7 @@
         android:roundIcon="@mipmap/taxi"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".bbodyActivity"></activity>
         <activity android:name=".ProfileChange" />
         <activity android:name=".carfull_Board_setting" />
         <activity android:name=".TaxiRoomSetting" />
@@ -32,4 +30,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
