--- a/KPU_T/app/src/main/AndroidManifest.xml
+++ b/KPU_T/app/src/main/AndroidManifest.xml
@@ -15,20 +15,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".SetImage"></activity>
-        <activity android:name=".ChattingRoom" android:parentActivityName=".TaxiMain" />
+        <activity android:name=".Setprofileimage"></activity>
+        <activity android:name=".ChattingRoom" android:parentActivityName=".MainActivity" />
 
         <activity android:name=".bbodyActivity"></activity>
         <activity android:name=".SetNickname" />
         <activity android:name=".GongG" />
-        <activity android:name=".carfull_Board_setting" />
-        <activity android:name=".TaxiRoomSetting" />
+        <activity android:name=".CarfullBoardsetting" />
+        <activity android:name=".ChatRoomsetting" />
         <activity android:name=".FindpwActivity" />
         <activity android:name=".Chatting" />
-        <activity android:name=".TaxiMain" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".SignInActivity" />
-        <activity android:name=".Main_Activity1" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
